--- a/webapp/view/master.view.xml
+++ b/webapp/view/master.view.xml
@@ -1,11 +1,13 @@
-<mvc:View xmlns:core="sap.ui.core" xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" controllerName="com.demo.ZDemo_MasterDetail.controller.master"
+<mvc:View xmlns:core="sap.ui.core"
+	xmlns:mvc="sap.ui.core.mvc"
+	xmlns="sap.m" controllerName="com.demo.ZDemo_MasterDetail.controller.master"
 	xmlns:html="http://www.w3.org/1999/xhtml">
 	<App>
 		<pages>
-			<Page title="Drinks List">
-				<List id="orders" items="{/drinks}" mode="SingleSelectMaster" selectionChange="onSelectionChange">
+			<Page title="Locations">
+				<List id="orders" items="{/locations}" mode="SingleSelectMaster" selectionChange="setMapLocation">
 					<items>
-						<StandardListItem title="{drinkName}" type="Active" press="onSelectionChange"/>
+						<StandardListItem title="{locName}" description="{locDesc}" type="Active"/>
 					</items>
 				</List>
 			</Page>
